--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+g!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
@@ -25,16 +25,6 @@
             rel="stylesheet"
             href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
-    <script>
-      (function (w, d) {
-        w.CollectId = "61db03d3b104f43d8bab71cc";
-        var h = d.head || d.getElementsByTagName("head")[0];
-        var s = d.createElement("script");
-        s.setAttribute("type", "text/javascript");
-        s.async = true;
-        s.setAttribute("src", "https://collectcdn.com/launcher.js");
-        h.appendChild(s);
-      })(window, document);</script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
